--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,13 @@ dependencies:
     sdk: flutter
   flutter_hooks: ^0.18.6
   hooks_riverpod: ^2.3.6
+  dio: ^5.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  local_auth: ^2.1.6
+  riverpod_annotation: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +50,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  custom_lint: ^0.4.0
+  riverpod_lint: ^1.3.2
+  build_runner: ^2.3.3
+  riverpod_generator: ^2.2.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
