--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   local_auth: ^2.1.6
   riverpod_annotation: ^2.1.1
+  json_annotation: ^4.8.1
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +57,8 @@ dev_dependencies:
   riverpod_lint: ^1.3.2
   build_runner: ^2.3.3
   riverpod_generator: ^2.2.3
+  json_serializable: ^6.7.0
+  freezed: ^2.3.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
